# biomedica-etl

./: CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  env_instruction.md  pyproject.toml
annotations/: README.md  cluster_labels.json  expert_derived_taxonomy.json  taxonomy_collapsed_and_filtered.json
docs/: Makefile  conf.py  make.bat
scripts/: .env  01_download_filelists.py  02_batch_filelist.py  03_download_batch_ftp.py  03_download_batch_ftp.sh  04_build_json.py  04_build_json.sh  05_json_to_entrez.py  05a_file_path_batching.py  05b_json_to_entrez_batch.sh  05c_remaining_json.py  06_serilaize_to_webdataset_parallel.py  06_serilaize_to_webdataset_parallel.sh  README.md  echo_env.sh
scripts/Labeler/: 01_get_features.py  02_train_labelers.py  03_get_label_dict.py  04_organize_by_label.py  05_extract_pmid.py  README.md  label.py
scripts/Labeler/slurm/: 01a_submit_get_features.sh  01b_submit_get_features_multiple.sh  02_train_labels.sh  03a_get_label_dict.sh  03b_get_label_dict_multiple.sh
scripts/Upload/: 7_upload_wd_dataset.py  7_upload_wd_datasets.sh
src/pmc_oa/: __init__.py  build_json.py  caption.py  context.py  download.py  download_batch.py  taxonomy.yml
src/pmc_oa/data_loaders/: __init__.py  dino_features_loader.py  load_pmc_oa.py  loader_utils.py  wd_loader.py
src/pmc_oa/feature_extractors/: __init__.py  extract_features.py
src/pmc_oa/label_utils/: label_propagation.py  models.py
src/pmc_oa/utils/: __init__.py  json_utils.py  logger_util.py  memory_usage.py  path_util.py  time_util.py
train/clip/: README.md
